updated keycloak url
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ S3_SECRET_ACCESS_KEY=
 
 ## Keycloak ##
 ##############
-KEYCLOAK_URL=http://localhost:8180
+KEYCLOAK_URL=http://localhost:8180/auth
 KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
