--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: devops-podkrepi-bg
-          password: ${{ secrets.DEVOPS_PACKAGES_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get tag
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -35,7 +35,6 @@ jobs:
         uses: docker/build-push-action@v3
         env:
           NODE_ENV: production
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         with:
           push: true
           target: production
@@ -53,8 +52,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: devops-podkrepi-bg
-          password: ${{ secrets.DEVOPS_PACKAGES_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get tag
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -68,7 +67,6 @@ jobs:
         uses: docker/build-push-action@v3
         env:
           NODE_ENV: production
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         with:
           push: true
           file: Dockerfile.migrations
