--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,13 @@ jobs:
             APP_VERSION=${{ env.VERSION }}
           tags: ghcr.io/podkrepi-bg/api:${{ env.VERSION }}
 
+      - name: Scan with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
+          scan_type: docker_image
+          docker_image_name: ghcr.io/podkrepi-bg/frontend/api:${{ env.VERSION }}
+
   build-migrations-docker-image:
     name: Build migrations docker image
     runs-on: ubuntu-latest
@@ -74,10 +81,46 @@ jobs:
             APP_VERSION=${{ env.VERSION }}
           tags: ghcr.io/podkrepi-bg/api/migrations:${{ env.VERSION }}
 
+      - name: Scan with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
+          scan_type: docker_image
+          docker_image_name: ghcr.io/podkrepi-bg/frontend/api/migrations:${{ env.VERSION }}
+
+  scan-manifests:
+    name: Scan k8s manifests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install kustomize
+        uses: imranismail/setup-kustomize@v1
+
+      - name: Build development manifests
+        run: kustomize build manifests/overlays/development > dev-manifests.yaml
+
+      - name: Scan development manifests with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
+          scan_type: k8s
+          path: dev-manifests.yaml
+
+      - name: Build production manifests
+        run: kustomize build manifests/overlays/production > prod-manifests.yaml
+
+      - name: Scan production manifests with Mondoo
+        uses: mondoohq/actions@main
+        with:
+          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
+          scan_type: k8s
+          path: prod-manifests.yaml
+
   release-dev:
     name: Release to dev
     runs-on: ubuntu-latest
-    needs: [build-api-docker-image, build-migrations-docker-image]
+    needs: [build-api-docker-image, build-migrations-docker-image, scan-manifests]
     environment:
       name: dev
       url: https://dev.podkrepi.bg/swagger
