add seed to migrations container
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -8,6 +8,8 @@ WORKDIR /app
 RUN yarn add prisma
 COPY schema.prisma .
 COPY migrations migrations/
+COPY db/seed/ db/seed/
+COPY package.json package.json
 
 USER 1000:1001
 
