Install ts-node
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -6,6 +6,7 @@ WORKDIR /app
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
 RUN yarn add prisma
+RUN yarn add ts-node
 COPY schema.prisma .
 COPY migrations migrations/
 COPY db/seed/ db/seed/
