--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,6 +92,39 @@ jobs:
           scan_type: docker_image
           docker_image_name: ghcr.io/podkrepi-bg/api/migrations:${{ env.VERSION }}
 
+  build-seed-docker-image:
+    name: Build seed docker image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get tag
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Get sha
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        run: echo "VERSION=master-$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        env:
+          NODE_ENV: production
+        with:
+          push: true
+          file: Dockerfile.migrations
+          target: seed
+          tags: |
+            ghcr.io/podkrepi-bg/api/seed:master
+            ghcr.io/podkrepi-bg/api/seed:${{ env.VERSION }}
+
   scan-manifests:
     name: Scan k8s manifests
     runs-on: ubuntu-latest
