fixed docker targets
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,7 @@ jobs:
         with:
           push: true
           file: Dockerfile.migrations
+          target: base
           build-args: |
             APP_VERSION=${{ env.VERSION }}
           tags: |
