--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -14,6 +14,7 @@ USER 1000:1001
 CMD yarn prisma migrate deploy
 
 FROM base AS seed
+USER 0
 COPY package.json yarn.lock .yarnrc ./
 COPY db/seed db/seed
 
