split packages and source
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -15,8 +15,10 @@ CMD yarn prisma migrate deploy
 
 FROM base AS seed
 USER 0
-COPY . .
+COPY package.json yarn.lock .yarnrc ./
 
 RUN yarn
+
+COPY . .
 
 CMD yarn prisma generate && yarn prisma db seed
