include all necessary env vars for api
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,21 @@ services:
       PORT: ${API_PORT?}
       TARGET_APP: api
       DATABASE_URL: postgres://${DB_USER?}:${DB_PASS?}@${DB_HOST?}:${DB_PORT?}/${DB_NAME?}?schema=api
+      KEYCLOAK_URL: ${KEYCLOAK_URL?}
+      KEYCLOAK_REALM: ${KEYCLOAK_REALM?}
+      KEYCLOAK_CLIENT_ID: ${KEYCLOAK_CLIENT_ID?}
+      KEYCLOAK_SECRET: ${KEYCLOAK_SECRET?}
+      SENTRY_DSN: ${SENTRY_DSN?}
+      SENTRY_ORG: ${SENTRY_ORG?}
+      SENTRY_PROJECT: ${SENTRY_PROJECT?}
+      SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN?}
+      SENTRY_SERVER_ROOT_DIR: ${SENTRY_SERVER_ROOT_DIR?}
+      SENDGRID_API_KEY: ${SENDGRID_API_KEY?}
+      SENDGRID_SENDER_EMAIL: ${SENDGRID_SENDER_EMAIL?}
+      SENDGRID_INTERNAL_EMAIL: ${SENDGRID_INTERNAL_EMAIL?}
+      SENDGRID_CONTACTS_URL: ${SENDGRID_CONTACTS_URL?}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY?}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET?}
     volumes:
       # Local:Container mounting points
       - ./:/app
