--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,4 @@ STRIPE_SECRET_KEY=stripe-key
 STRIPE_WEBHOOK_SECRET=stripe-secret
 S3_ACCESS_KEY=s3-access-key
 S3_SECRET_ACCESS_KEY=s3-secret-access-key
+JWT_SECRET_KEY = VerySecretPrivetKey
