--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/common": "8.4.5",
     "@nestjs/config": "2.0.0",
     "@nestjs/core": "8.4.5",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-express": "8.4.5",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/terminus": "8.0.6",
