included APP_URL_LOCAL in .env file

--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@ TARGET_ENV=development
 ##############
 API_PORT=5010
 APP_URL=https://dev.podkrepi.bg
+APP_URL_LOCAL=http://localhost:3040
+
 
 ## Database ##
 ##############
