--- a/.env
+++ b/.env
@@ -31,6 +31,8 @@ DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 ## S3 ##
 ########
 S3_ENDPOINT=https://cdn-dev.podkrepi.bg
+S3_ACCESS_KEY=s3-access-key
+S3_SECRET_ACCESS_KEY=s3-secret-access-key
 
 ## Keycloak ##
 ##############
@@ -48,10 +50,15 @@ KEYCLOAK_PASSWORD=admin
 SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
 SENTRY_ORG=podkrepibg
 SENTRY_PROJECT=rest-api
+SENTRY_AUTH_TOKEN=
 SENTRY_SERVER_ROOT_DIR=/app
 
 # Sendgrid
+SENDGRID_API_KEY=sendgrid-key
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
 SENDGRID_INTERNAL_EMAIL=dev@podkrepi.bg
 SENDGRID_CONTACTS_URL=/v3/marketing/contacts
 
+## Stripe
+STRIPE_SECRET_KEY=stripe-key
+STRIPE_WEBHOOK_SECRET=stripe-secret
