--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           push: false
           file: Dockerfile.migrations
+          target: base
           tags: ghcr.io/podkrepi-bg/api/migrations:pr
 
       - name: Scan with Mondoo
@@ -49,7 +50,6 @@ jobs:
           service_account_credentials: ${{ secrets.MONDOO_SECRET }}
           scan_type: docker_image
           docker_image_name: ghcr.io/podkrepi-bg/api/migrations:pr
-          extra_args: --verbose
 
   scan-manifests:
     name: Scan k8s manifests
