add JWT_SECRET_KEY env to api deployment
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -88,6 +88,11 @@ spec:
                 secretKeyRef:
                   name: db-api
                   key: url
+            - name: JWT_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: secret
+                  name: jwt-secret
             - name: S3_BUCKET
               value: campaign-files
             - name: KEYCLOAK_URL
