Fix Mondoo scan for PR checks (#326)
* debug mondoo

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* change target for migrations container in check-pr

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           push: false
           file: Dockerfile.migrations
+          target: base
           tags: ghcr.io/podkrepi-bg/api/migrations:pr
 
       - name: Scan with Mondoo
