--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -23,7 +23,7 @@ jobs:
           tags: ghcr.io/podkrepi-bg/api:pr
 
       - name: Scan with Mondoo
-        uses: mondoohq/actions@main
+        uses: mondoohq/actions@new_syntax
         with:
           service_account_credentials: ${{ secrets.MONDOO_SECRET }}
           scan_type: docker_image
@@ -45,7 +45,7 @@ jobs:
           tags: ghcr.io/podkrepi-bg/api/migrations:pr
 
       - name: Scan with Mondoo
-        uses: mondoohq/actions@main
+        uses: mondoohq/actions@new_syntax
         with:
           service_account_credentials: ${{ secrets.MONDOO_SECRET }}
           scan_type: docker_image
@@ -64,7 +64,7 @@ jobs:
         run: kustomize build manifests/overlays/development > dev-manifests.yaml
 
       - name: Scan development manifests with Mondoo
-        uses: mondoohq/actions@main
+        uses: mondoohq/actions@new_syntax
         with:
           service_account_credentials: ${{ secrets.MONDOO_SECRET }}
           scan_type: k8s
@@ -74,7 +74,7 @@ jobs:
         run: kustomize build manifests/overlays/production > prod-manifests.yaml
 
       - name: Scan production manifests with Mondoo
-        uses: mondoohq/actions@main
+        uses: mondoohq/actions@new_syntax
         with:
           service_account_credentials: ${{ secrets.MONDOO_SECRET }}
           scan_type: k8s
