--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nestjs/swagger": "5.2.1",
     "@nestjs/terminus": "8.0.6",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "^3.15.2",
+    "@prisma/client": "4",
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.19.7",
@@ -88,7 +88,7 @@
     "lint-staged": "11.1.2",
     "nx": "13.9.3",
     "prettier": "2.6.0",
-    "prisma": "^3.15.2",
+    "prisma": "4",
     "prisma-dbml-generator": "0.9.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
