--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -21,13 +21,12 @@ jobs:
           push: false
           target: production
           tags: ghcr.io/podkrepi-bg/api:pr
-
+      
       - name: Scan with Mondoo
-        uses: mondoohq/actions@new_syntax
+        uses: mondoohq/actions/docker-image@main
         with:
-          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
-          scan_type: docker_image
-          docker_image_name: ghcr.io/podkrepi-bg/api:pr
+          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
+          image: ghcr.io/podkrepi-bg/api:pr
 
   build-maintenance:
     name: Build and scan migrations container image
@@ -45,11 +44,10 @@ jobs:
           tags: ghcr.io/podkrepi-bg/api/migrations:pr
 
       - name: Scan with Mondoo
-        uses: mondoohq/actions@new_syntax
+        uses: mondoohq/actions/docker-image@main
         with:
-          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
-          scan_type: docker_image
-          docker_image_name: ghcr.io/podkrepi-bg/api/migrations:pr
+          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
+          image: ghcr.io/podkrepi-bg/api/migrations:pr
 
   scan-manifests:
     name: Scan k8s manifests
@@ -64,18 +62,16 @@ jobs:
         run: kustomize build manifests/overlays/development > dev-manifests.yaml
 
       - name: Scan development manifests with Mondoo
-        uses: mondoohq/actions@new_syntax
+        uses: mondoohq/actions/k8s-manifest@main
         with:
-          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
-          scan_type: k8s
+          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: dev-manifests.yaml
 
       - name: Build production manifests
         run: kustomize build manifests/overlays/production > prod-manifests.yaml
 
       - name: Scan production manifests with Mondoo
-        uses: mondoohq/actions@new_syntax
+        uses: mondoohq/actions/k8s-manifest@main
         with:
-          service_account_credentials: ${{ secrets.MONDOO_SECRET }}
-          scan_type: k8s
+          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: prod-manifests.yaml
