Squashed commit of the following:
commit 21b30d69d6302785fa12c1808a4c97bce7fcf98d
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Wed Oct 12 13:11:09 2022 +0300

    added: verification of incoming paypal messages

commit 3890d347a6fc10ab28fa1f0eed9f339624b27c2f
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Tue Oct 11 15:01:47 2022 +0300

    linting fixes

commit 220ab5f6f08d09f75c3d7bbbb288d13a64d0027f
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Tue Oct 11 14:57:29 2022 +0300

    enabled: rawbody for paypal/webhook

commit b192056bde428eecc3350dc85ed4d4c6d3c2d3ef
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Tue Oct 11 14:56:50 2022 +0300

    upgraded nestjs framework

commit 5c23db1a045125e5aaf7ab7f0b991d5136771beb
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Mon Oct 10 11:23:57 2022 +0300

    fixed: paypal default tests

commit 5d38e9606263d020be71b1d8e9ff1992ac574e71
Author: quantum-grit <quantum-grit@gmail.com>
Date:   Mon Oct 10 10:22:52 2022 +0300

    implemented: paypal processing of order created and capture completed messages

--- a/.env
+++ b/.env
@@ -65,3 +65,9 @@ SENDGRID_CONTACTS_URL=/v3/marketing/contacts
 ## Stripe
 STRIPE_SECRET_KEY=stripe-key
 STRIPE_WEBHOOK_SECRET=stripe-secret
+
+## Paypal
+PAYPAL_URL=https://api-m.sandbox.paypal.com
+PAYPAL_CLIENT_ID=paypal_client_id
+PAYPAL_CLIENT_SECRET=paypal_client_secret
+PAYPAL_WEBHOOK_ID=get_it_from_webhook_registration
