--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "@golevelup/nestjs-stripe": "^0.3.4",
     "@golevelup/nestjs-webhooks": "^0.2.13",
     "@keycloak/keycloak-admin-client": "18.0.0",
-    "@nestjs/axios": "^0.0.7",
-    "@nestjs/cli": "8.2.5",
-    "@nestjs/common": "8.4.5",
-    "@nestjs/config": "2.0.0",
-    "@nestjs/core": "8.4.5",
+    "@nestjs/axios": "^0.1.0",
+    "@nestjs/cli": "^9.1.4",
+    "@nestjs/common": "^9.1.4",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.1.4",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/platform-express": "8.4.5",
-    "@nestjs/swagger": "5.2.1",
-    "@nestjs/terminus": "8.0.6",
-    "@ntegral/nestjs-sentry": "3.0.6",
+    "@nestjs/platform-express": "^9.1.4",
+    "@nestjs/swagger": "^6.1.2",
+    "@nestjs/terminus": "^9.1.2",
+    "@ntegral/nestjs-sentry": "^4.0.0",
     "@prisma/client": "^4.3",
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
@@ -59,8 +59,8 @@
     "tslib": "2.4.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "8.0.5",
-    "@nestjs/testing": "8.2.5",
+    "@nestjs/schematics": "9.0.3",
+    "@nestjs/testing": "9.1.4",
     "@nrwl/cli": "12.9.0",
     "@nrwl/eslint-plugin-nx": "13.9.3",
     "@nrwl/jest": "13.9.3",
