test coverage to show only changed files

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,8 @@ jobs:
           targets: lint,build
           projects: api
       - name: Jest coverage report
-        uses: ArtiomTr/jest-coverage-report-action@v2.1.1
+        uses: ArtiomTr/jest-coverage-report-action@v2.1.2
         with:
           package-manager: yarn
           test-script: yarn test:ci
+          annotations: coverage
