--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
   "devDependencies": {
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.4",
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "13.9.3",
-    "@nrwl/jest": "13.9.3",
-    "@nrwl/linter": "13.9.3",
-    "@nrwl/nest": "13.9.3",
-    "@nrwl/node": "13.9.3",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/workspace": "13.9.3",
+    "@nrwl/cli": "15.0.4",
+    "@nrwl/eslint-plugin-nx": "15.0.4",
+    "@nrwl/jest": "15.0.4",
+    "@nrwl/linter": "15.0.4",
+    "@nrwl/nest": "15.0.4",
+    "@nrwl/node": "15.0.4",
+    "@nrwl/tao": "15.0.4",
+    "@nrwl/workspace": "^15.0.4",
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
     "@types/jest": "27.0.2",
@@ -86,7 +86,7 @@
     "jest-extended": "1.2.0",
     "jest-mock-extended": "2.0.4",
     "lint-staged": "11.1.2",
-    "nx": "13.9.3",
+    "nx": "15.0.4",
     "prettier": "2.6.0",
     "prisma": "^4.3",
     "prisma-dbml-generator": "^0.9",
