--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,10 @@ services:
       S3_ENDPOINT: ${S3_ENDPOINT?}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY?}
       S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY?}
+      PAYPAL_URL: ${PAYPAL_URL?}
+      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID?}
+      PAYPAL_CLIENT_SECRET: ${PAYPAL_CLIENT_SECRET?}
+      PAYPAL_WEBHOOK_ID: ${PAYPAL_WEBHOOK_ID?}
     ports:
       - '${API_PORT?}:${API_PORT?}'
     depends_on:
