--- a/.env
+++ b/.env
@@ -27,6 +27,13 @@ DB_PASS=postgrespass
 DB_PORT=5432
 DB_NAME=postgres
 
+## Keycloak  ##
+##############
+KEYCLOAK_DB_VENDOR=POSTGRES
+KEYCLOAK_DB_USER=keycloak
+KEYCLOAK_DB_PASSWORD=keycloak
+KEYCLOAK_DB_NAME=keycloak
+
 ## Local prisma db url
 DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
@@ -39,7 +46,7 @@ S3_SECRET_ACCESS_KEY=s3-secret-access-key
 
 ## Keycloak ##
 ##############
-KEYCLOAK_URL=http://localhost:8180/auth
+KEYCLOAK_URL=http://localhost:8080/auth
 KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
