359 - One postgres instance for both keycloak and general database (#360)
* 359 - Change keycloak configuration to now use the existing postgras instance

* 359 - Return the initial port mapping

* 359 - Add env variables for the keycloak db

* 359 - Fix keycloak volume paths

* 359 - Comment explaining keycloak volume path

* 359 - Return initial keycloak port

--- a/.env
+++ b/.env
@@ -27,6 +27,13 @@ DB_PASS=postgrespass
 DB_PORT=5432
 DB_NAME=postgres
 
+## Keycloak  ##
+##############
+KEYCLOAK_DB_VENDOR=POSTGRES
+KEYCLOAK_DB_USER=keycloak
+KEYCLOAK_DB_PASSWORD=keycloak
+KEYCLOAK_DB_NAME=keycloak
+
 ## Local prisma db url
 DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
