--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,16 @@ services:
 
     networks:
       - backend-net
+
+  ## Stripe Development ##
+  ##########################
+  stripe-webhook:
+    image: stripe/stripe-cli:latest
+    restart: always
+    command: ["listen", "--api-key", "${STRIPE_API_KEY}", "--forward-to", "localhost:5010/api/v1/stripe/webhook"]
+    ports:
+      - '5010:5010'
+
   ########################################
   ## LOCAL IDENTITY PROVIDER - KEYCLOAK ##
   ########################################
