update mondoo action config
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/check-pr.yml
+++ b/.github/workflows/check-pr.yml
@@ -24,8 +24,9 @@ jobs:
       
       - name: Scan with Mondoo
         uses: mondoohq/actions/docker-image@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           image: ghcr.io/podkrepi-bg/api:pr
 
   build-maintenance:
@@ -45,8 +46,9 @@ jobs:
 
       - name: Scan with Mondoo
         uses: mondoohq/actions/docker-image@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           image: ghcr.io/podkrepi-bg/api/migrations:pr
 
   scan-manifests:
@@ -63,8 +65,9 @@ jobs:
 
       - name: Scan development manifests with Mondoo
         uses: mondoohq/actions/k8s-manifest@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: dev-manifests.yaml
 
       - name: Build production manifests
@@ -72,6 +75,7 @@ jobs:
 
       - name: Scan production manifests with Mondoo
         uses: mondoohq/actions/k8s-manifest@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: prod-manifests.yaml
