--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,9 @@ jobs:
 
       - name: Scan with Mondoo
         uses: mondoohq/actions/docker-image@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           image: ghcr.io/podkrepi-bg/api:${{ env.VERSION }}
 
   build-migrations-docker-image:
@@ -87,8 +88,9 @@ jobs:
 
       - name: Scan with Mondoo
         uses: mondoohq/actions/docker-image@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           image: ghcr.io/podkrepi-bg/api/migrations:${{ env.VERSION }}
 
   build-seed-docker-image:
@@ -138,8 +140,9 @@ jobs:
 
       - name: Scan development manifests with Mondoo
         uses: mondoohq/actions/k8s-manifest@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: dev-manifests.yaml
 
       - name: Build production manifests
@@ -147,8 +150,9 @@ jobs:
 
       - name: Scan production manifests with Mondoo
         uses: mondoohq/actions/k8s-manifest@main
+        env:
+          MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_SECRET }}
         with:
-          service-account-credentials: ${{ secrets.MONDOO_SECRET }}
           path: prod-manifests.yaml
 
   release-dev:
