--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,4 +1,5 @@
 FROM node:16-alpine3.16 as base
+RUN apk add g++ make py3-pip
 WORKDIR /app
 
 # The @prisma/client package defines its own postinstall hook that's being
