--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,7 +133,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kustomize
-        uses: imranismail/setup-kustomize@v1
+        uses: imranismail/setup-kustomize@v2
 
       - name: Build development manifests
         run: kustomize build manifests/overlays/development > dev-manifests.yaml
@@ -169,7 +169,7 @@ jobs:
         uses: azure/setup-kubectl@v3
 
       - name: Install kustomize
-        uses: imranismail/setup-kustomize@v1
+        uses: imranismail/setup-kustomize@v2
 
       - name: Get tag
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
@@ -190,6 +190,9 @@ jobs:
 
       - name: Apply new manifests
         run: kubectl apply -k manifests/overlays/development --kubeconfig config.yaml
+
+      - name: Wait until deployment is ready
+        run: kubectl -n podkrepibg-dev wait --for=condition=Ready pods --all --timeout=180s --kubeconfig config.yaml
 
       - name: Delete kubeconfig
         if: always()
@@ -223,7 +226,7 @@ jobs:
         uses: azure/setup-kubectl@v3
 
       - name: Install kustomize
-        uses: imranismail/setup-kustomize@v1
+        uses: imranismail/setup-kustomize@v2
 
       - name: Get tag
         run: echo "VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -239,6 +242,9 @@ jobs:
 
       - name: Apply new manifests
         run: kubectl apply -k manifests/overlays/production --kubeconfig config.yaml
+
+      - name: Wait until deployment is ready
+        run: kubectl -n podkrepibg wait --for=condition=Ready pods --all --timeout=180s --kubeconfig config.yaml
 
       - uses: sarisia/actions-status-discord@v1
         if: always()
