upgraded: yarn to v3.3, note this broke the tests - fixing in next commit

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ Thumbs.db
 
 # Env
 .env*.local
+
+# https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
