--- a/package.json
+++ b/package.json
@@ -109,5 +109,6 @@
     "set-value": "^4.0.1",
     "glob-parent": "^5.1.2",
     "undici": "^5.8.2"
-  }
+  },
+  "packageManager": "yarn@3.3.0"
 }
