--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.1.4",
+    "@nestjs/testing": "^9.2.1",
     "@nrwl/cli": "15.0.4",
     "@nrwl/eslint-plugin-nx": "15.0.4",
     "@nrwl/jest": "15.0.4",
@@ -71,7 +71,7 @@
     "@nrwl/workspace": "^15.0.4",
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
-    "@types/jest": "27.0.2",
+    "@types/jest": "^29.2.3",
     "@types/mjml": "4.7.0",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
@@ -82,15 +82,15 @@
     "eslint-config-prettier": "8.3.0",
     "faker": "5.5.3",
     "husky": "7.0.2",
-    "jest": "27.2.3",
-    "jest-extended": "1.2.0",
-    "jest-mock-extended": "2.0.4",
+    "jest": "29.2.2",
+    "jest-extended": "^3.2.0",
+    "jest-mock-extended": "^3.0.1",
     "lint-staged": "11.1.2",
     "nx": "15.0.4",
     "prettier": "2.6.0",
     "prisma": "^4.3",
     "prisma-dbml-generator": "^0.9",
-    "ts-jest": "27.0.5",
+    "ts-jest": "^29.0.3",
     "ts-node": "10.2.1",
     "typescript": "4.3.5"
   },
