--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,16 +37,11 @@ jobs:
         with:
           targets: lint,build
           projects: api
-      - name: Jest coverage report
-        uses: ArtiomTr/jest-coverage-report-action@v2
-        # give the id for the step, to access outputs in another step.
-        id: coverage
-        with:
-          package-manager: yarn
-          test-script: yarn test:ci
-          # tell to the action to not attach comment.
-          output: report-markdown
-      - uses: marocchino/sticky-pull-request-comment@v2
-        with:
-            # pass output from the previous step by id.
-            message: ${{ steps.coverage.outputs.report }}
+      - name: Run tests
+        run: yarn test:ci
+      - name: Upload test results artifact
+        uses: actions/upload-artifact@v3  # upload test results
+        if: success() || failure()        # run this step even if previous step failed
+        with:                             # upload a combined archive with unit and integration test results
+          name: test-results
+          path: test-results.xml
