--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "yarn nx lint api && yarn nx build",
     "build-all": "yarn nx run-many --target build --all --parallel",
     "test": "yarn prisma generate && yarn format && yarn jest",
-    "test:ci": "yarn prisma generate && yarn jest",
+    "test:ci": "yarn prisma generate && yarn jest --reporters=jest-junit",
     "test:changed": "yarn jest --onlyChanged",
     "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/v1/stripe/webhook",
     "format": "nx format affected",
@@ -84,6 +84,7 @@
     "husky": "7.0.2",
     "jest": "27.2.3",
     "jest-extended": "1.2.0",
+    "jest-junit": "^15.0.0",
     "jest-mock-extended": "2.0.4",
     "lint-staged": "11.1.2",
     "nx": "15.0.4",
@@ -109,5 +110,8 @@
     "set-value": "^4.0.1",
     "glob-parent": "^5.1.2",
     "undici": "^5.8.2"
+  },
+  "jest-junit": {
+    "outputName": "test-results.xml"
   }
 }
