--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,14 @@ Thumbs.db
 # Env
 .env*.local
 
+# https://yarnpkg.com/getting-started/qa/#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# tests
 test-results.xml
