--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -5,7 +5,7 @@ WORKDIR /app
 # executed whenever the package is being installed. This hook invokes the
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
-RUN yarn add prisma
+RUN yarn set version berry
 COPY schema.prisma .
 COPY migrations migrations/
 
@@ -15,7 +15,9 @@ CMD yarn prisma migrate deploy
 
 FROM base AS seed
 USER 0
-COPY package.json yarn.lock .yarnrc ./
+RUN yarn set version berry
+COPY package.json yarn.lock .yarnrc.yml ./
+COPY .yarn .yarn
 
 RUN yarn
 
