--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,4 +1,4 @@
-FROM node:16-alpine3.16 as base
+FROM node:18-alpine3.16 as base
 WORKDIR /app
 
 # The @prisma/client package defines its own postinstall hook that's being
@@ -6,6 +6,7 @@ WORKDIR /app
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
 RUN yarn set version berry
+RUN yarn add prisma
 COPY schema.prisma .
 COPY migrations migrations/
 
