--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tslib": "2.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.1.4",
     "@nrwl/cli": "15.0.4",
@@ -80,7 +81,6 @@
     "@vegardit/prisma-generator-nestjs-dto": "^1.5",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
-    "faker": "5.5.3",
     "husky": "7.0.2",
     "jest": "27.2.3",
     "jest-extended": "1.2.0",
