--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,9 @@ services:
 
   seed-db:
     image: ghcr.io/podkrepi-bg/api/seed:master
+    build:
+      context: .
+      dockerfile: ./Dockerfile.migrations
     container_name: ${COMPOSE_PROJECT_NAME?}-seed-db
     restart: 'no'
     environment:
