--- a/.github/workflows/check-pr-fork.yml
+++ b/.github/workflows/check-pr-fork.yml
@@ -12,40 +12,35 @@ jobs:
   check-label:
     name: Check label
     runs-on: ubuntu-latest
-    # sender.login is needed for runs re-triggered from GitHub UI
-    if: |
-      (github.event.pull_request.user.login == 'dependabot[bot]' && contains(github.event.pull_request.labels.*.name, 'run tests'))
-      || (github.event.pull_request.head.repo.fork && contains(github.event.pull_request.labels.*.name, 'run tests'))
+    # If this is not a fork do not start this step
+    if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.head.repo.fork }}
     permissions:
       pull-requests: write
     steps:
-      - uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-      - name: remove labels
+      - name: Check whether tests are enabled for this PR
+        run: |
+          echo "IS_FORK=${{ github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.head.repo.fork }}" >> $GITHUB_ENV
+          echo "HAS_LABEL=${{ contains(github.event.pull_request.labels.*.name, 'run tests') }}" >> $GITHUB_ENV
+      - name: Remove 'run tests' label
+        # If the PR is created by dependabot or is a fork and has the 'run tests' label, remove it
+        if: $ {{ env.IS_FORK == 'true' && env.HAS_LABEL == 'true' }}
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "run tests"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-  check-pr-tests:
-    name: Check PR tests status
-    runs-on: ubuntu-latest
-    if: |
-      (github.event.pull_request.user.login == 'dependabot[bot]' && !contains(github.event.pull_request.labels.*.name, 'run tests'))
-      || (github.event.pull_request.head.repo.fork && !contains(github.event.pull_request.labels.*.name, 'run tests'))
-    permissions:
-      pull-requests: write
-    steps:
-      - uses: mshick/add-pr-comment@v2
-        with:
-          message: |
-            Not all tests have run for this PR. Please add the `run tests` label to trigger them.
-
-      - run: |
+      - name: Fail workflow
+        if: $ {{ env.IS_FORK == 'true' && env.HAS_LABEL == 'false' }}
+        run: |
           echo "Not all tests have run for this PR. Please add the `run tests` label to trigger them."
           exit 1
+      - name: Update PR comment
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            Tests will run for this PR. Once they succeed it can be merged.
+          message-failure: |
+            Not all tests have run for this PR. Please add the `run tests` label to trigger them.
+
 
   security-checks:
     name: Security tests
