--- a/.github/workflows/check-pr-fork.yml
+++ b/.github/workflows/check-pr-fork.yml
@@ -17,6 +17,9 @@ jobs:
     permissions:
       pull-requests: write
     steps:
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - name: Check whether tests are enabled for this PR
         run: |
           echo "IS_FORK=${{ github.event.pull_request.user.login == 'dependabot[bot]' || github.event.pull_request.head.repo.fork }}" >> $GITHUB_ENV
