run PR comment for forks always
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/check-pr-fork.yml
+++ b/.github/workflows/check-pr-fork.yml
@@ -38,6 +38,7 @@ jobs:
           exit 1
       - name: Update PR comment
         uses: mshick/add-pr-comment@v2
+        if: always()
         with:
           message: |
             ✅ Tests will run for this PR. Once they succeed it can be merged.
