updated @nrwl and nx to fix security warnigns from dependabot

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:ci": "yarn prisma generate && yarn jest --reporters=jest-junit",
     "test:changed": "yarn jest --onlyChanged",
     "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/v1/stripe/webhook",
-    "format": "nx format affected",
+    "format": "nx format",
     "migrate": "yarn prisma migrate deploy",
     "generate-schema": "yarn prisma generate && yarn format",
     "seed": "yarn prisma db seed",
@@ -65,14 +65,14 @@
     "@faker-js/faker": "7.6.0",
     "@nestjs/schematics": "9.0.3",
     "@nestjs/testing": "9.2.1",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/linter": "15.0.4",
-    "@nrwl/nest": "15.0.4",
-    "@nrwl/node": "15.0.4",
-    "@nrwl/tao": "15.0.4",
-    "@nrwl/workspace": "15.0.4",
+    "@nrwl/cli": "^15.5.1",
+    "@nrwl/eslint-plugin-nx": "^15.5.1",
+    "@nrwl/jest": "^15.5.1",
+    "@nrwl/linter": "^15.5.1",
+    "@nrwl/nest": "^15.5.1",
+    "@nrwl/node": "^15.5.1",
+    "@nrwl/tao": "^15.5.1",
+    "@nrwl/workspace": "^15.5.1",
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
     "@types/jest": "29.2.3",
@@ -92,7 +92,7 @@
     "jest-junit": "15.0.0",
     "jest-mock-extended": "3.0.1",
     "lint-staged": "11.1.2",
-    "nx": "15.0.4",
+    "nx": "^15.5.1",
     "prettier": "2.6.0",
     "prisma": "4.3.1",
     "prisma-dbml-generator": "0.9.1",
