--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/apps/api/src/main.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ],
-            "runtimeArgs": [
-              "--nolazy",
-              "-r",
-              "ts-node/register",
-              "-r",
-              "tsconfig-paths/register"
-            ],
-            "sourceMaps": true,
-            "envFile": "${workspaceFolder}/.env.local",
-            "console": "integratedTerminal"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "Launch Program",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/apps/api/src/main.ts",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
+      "runtimeArgs": ["--nolazy", "-r", "ts-node/register", "-r", "tsconfig-paths/register"],
+      "sourceMaps": true,
+      "envFile": "${workspaceFolder}/.env.local",
+      "console": "integratedTerminal"
+    }
+  ]
 }
