--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.19.7",
+    "@socket.io/postgres-adapter": "^0.3.1",
+    "@socket.io/postgres-emitter": "^0.1.0",
+    "@types/pg": "^8.6.6",
     "aws-sdk": "2.1199.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -58,6 +61,7 @@
     "nest-keycloak-connect": "1.9.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
+    "socket.io": "latest",
     "stripe": "9.16.0",
     "swagger-ui-express": "4.5.0",
     "tslib": "2.4.0"
@@ -97,6 +101,7 @@
     "prettier": "2.6.0",
     "prisma": "4.3.1",
     "prisma-dbml-generator": "0.9.1",
+    "socket.io-client": "^4.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
