Refactor environment variable configuration
- remove the `.env` configuration file from the repository to avoid sensitive information exposure
- add `.env.example` file to serve as a base point and guide for the default values of the environment variables
- update the README to follow the new environment variable configuration structure
- update the GitHub actions flow for the tests to prepare the .env variables file
- update the GitHub PR template to reference the changes in the configuration file name

References: #267

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,6 @@ API_PORT=5010
 APP_URL=https://dev.podkrepi.bg
 APP_URL_LOCAL=http://localhost:3040
 
-
 ## Database ##
 ##############
 DB_HOST=pg-db
@@ -56,25 +55,33 @@ KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
 
-## Sentry.io
+## Sentry.io ##
+###############
 SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
 SENTRY_ORG=podkrepibg
 SENTRY_PROJECT=rest-api
 SENTRY_AUTH_TOKEN=
 SENTRY_SERVER_ROOT_DIR=/app
 
-# Sendgrid
+## Sendgrid ##
+##############
 SENDGRID_API_KEY=sendgrid-key
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
 SENDGRID_INTERNAL_EMAIL=dev@podkrepi.bg
 SENDGRID_CONTACTS_URL=/v3/marketing/contacts
 
-## Stripe
+## Stripe ##
+############
 STRIPE_SECRET_KEY=stripe-secret-key
 STRIPE_WEBHOOK_SECRET=stripe-webhook-secret
 
-## Paypal
+## Paypal ##
+############
 PAYPAL_URL=https://api-m.sandbox.paypal.com
 PAYPAL_CLIENT_ID=paypal_client_id
 PAYPAL_CLIENT_SECRET=paypal_client_secret
 PAYPAL_WEBHOOK_ID=get_it_from_webhook_registration
+
+## Auth ##
+##########
+JWT_SECRET_KEY=VerySecretPrivateKey
