set komodor annotations for deployment
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: api-headless
   labels:
     app: api-headless
+  annotations:
+    app.komodor.com/app: https://github.com/podkrepi-bg/api
 spec:
   replicas: 1
   selector:
