--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,6 +184,7 @@ jobs:
         run: |
           kustomize edit set image ghcr.io/podkrepi-bg/api=ghcr.io/podkrepi-bg/api:$VERSION
           kustomize edit set image ghcr.io/podkrepi-bg/api/migrations=ghcr.io/podkrepi-bg/api/migrations:$VERSION
+          kustomize edit set annotation app.komodor.com/app.ref:$GITHUB_SHA  
 
       - name: Set kubeconfig
         run: echo ${{ secrets.K8S_DEV_CONFIG }} | base64 -d > config.yaml
@@ -236,6 +237,7 @@ jobs:
         run: |
           kustomize edit set image ghcr.io/podkrepi-bg/api=ghcr.io/podkrepi-bg/api:$VERSION
           kustomize edit set image ghcr.io/podkrepi-bg/api/migrations=ghcr.io/podkrepi-bg/api/migrations:$VERSION
+          kustomize edit set annotation app.komodor.com/app.ref:$GITHUB_SHA  
 
       - name: Set kubeconfig
         run: echo ${{ secrets.K8S_CONFIG }} | base64 -d > config.yaml
